11.1 Security Context: deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-secure-app
  labels:
    app: my-secure-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-secure-app
  template:
    metadata:
      labels:
        app: my-secure-app
    spec:
      containers:
      - name: my-container
        image: nginx:1.25.0
        ports:
        - containerPort: 80
