14.1 Readiness Probe: deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-webapp
  template:
    metadata:
      labels:
        app: my-webapp
    spec:
      containers:
      - name: my-container
        image: nginx:alpine
        ports:
        - containerPort: 8081
        command: ["sh", "-c", "echo 'OK' > /usr/share/nginx/html/healthz; nginx -g 'daemon off;';"]
