16.2 RBAC: deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor-app
  template:
    metadata:
      labels:
        app: monitor-app
    spec:
      serviceAccountName: service-reader-sa
      containers:
      - name: monitor-container
        image: bitnami/kubectl:1.29.3
        command: ["/bin/sh", "-c"]
        args:
          - |
            echo "Attempting to list services..."
            kubectl get services
            echo "Success!"
            sleep 3600
