9.1 Network-Policy: servers.yaml
# servers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-server
  labels:
    app: web
spec:
  containers:
  - name: web-container
    image: nginx:alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: db-server
  labels:
    app: db
spec:
  containers:
  - name: db-container
    image: nginx:alpine
