3.2 Ingress-Networking-1: service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-webapp-service
spec:
  selector:
    app: my-webapp
  ports:
    - protocol: TCP
      port: 80       # Service listens on port 80
      targetPort: 8080 # Maps to the container's port 8080
  type: ClusterIP
